<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_photo_library_black_24dp"
        android:title="@string/title_gallery" />
    <item
        android:id="@+id/nav_daily"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/title_daily" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_face_black_24dp"
        android:title="@string/title_profile" />
</menu>
