<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profil"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="2dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/gallery1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"/>
    <TextView
        android:id="@+id/txt_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_below="@id/img_profil"
        android:text="@string/nama"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt_tgllhr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_nama"
        android:text="@string/tgl_lahir"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/txt_moto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_tgllhr"
        android:text="@string/moto"
        android:textSize="14sp"
        android:textStyle="italic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:layout_below="@id/txt_moto"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:padding="@dimen/activity_horizontal_margin"/>


</RelativeLayout>